# SpaceSnake

./: CMakeLists.txt  README.md
include/: bmp.h  display.h  drawing.h  gameCamera.h  gameConfiguration.h  gameControls.h  gameTextures.h  gameWindow.h  keys.h  materials.h  moving.h  spaceSnake.h  types.h  utils.h
src/: bmp.c  display.c  drawing.c  keys.c  main.c  materials.c  moving.c  utils.c
